fixed links to go to correct modals after shuffling order

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 </div> -->
                 <!-- About Section Content-->
                 <div class="row">
-                    <div class="col-lg-4 ml-auto"><p class="lead">Hello! My name is Christopher Butcher, and I am a Game Programmer, Sound Designer, & Composer. As a programmer, I enjoy trying to solve any problem provided by my design team, looking for new ways to enhance the program and make the code more efficient. When writing music and mixing sound effects, my main goal is to immerse the player in the game world without overwhelming them. This is made possible through middleware implementation, combining my passion for both music and code. </p></div>
+                    <div class="col-lg-4 ml-auto"><p class="lead">Hello! My name is Christopher Butcher, and I am a Game Programmer, Sound Designer, & Composer. As a programmer, I enjoy trying to solve any problem provided by my design team, looking for new ways to enhance the program and make the code more efficient. </p><p class="lead">When writing music and mixing sound effects, my main goal is to immerse the player in the game world without overwhelming them. This is made possible through middleware implementation, combining my passion for both music and code. </p></div>
                     <div class="col-lg-4 mr-auto"><p class="lead">Currently, I am honing these skills on <i>Breach of Space</i> as both Sound Design Lead & a founding member of the programming team. In <i>Breach of Space</i>, you must defeat the evil corporation that is taking over your home planet. Stealthily distract, sabotage, and cause enough mayhem for the robotic staff to leave your home among the stars for good. </p></div>
                 </div>
                 <!-- About Section Button-->
@@ -115,7 +115,7 @@
                     </div>
                     <!-- Portfolio Item 3-->
                     <div class="col-md-6 col-lg-4 mb-5">
-                        <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal3">
+                        <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal6">
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white">Survival Shooter Template Soundtrack</div>
                             </div>
@@ -124,29 +124,29 @@
                     </div>
                     <!-- Portfolio Item 4-->
                     <div class="col-md-6 col-lg-4 mb-5 mb-lg-0">
-                        <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal4">
+                        <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal5">
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white">Gridworld</div>
                             </div>
-                            <img class="img-fluid" src="./assets/img/portfolio/Scare-Away3.png" alt="a single sheep appears in a larger grid of different textures, such as grass, water, and stone" />
+                            <img class="img-fluid" src="./assets/img/portfolio/Gridworld1.JPG" alt="a single sheep appears in a larger grid of different textures, such as grass, water, and stone" />
                         </div>
                     </div>
                     <!-- Portfolio Item 5-->
                     <div class="col-md-6 col-lg-4 mb-5 mb-md-0">
-                        <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal5">
+                        <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal3">
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white">Robin's Quest!</div>
                             </div>
-                            <img class="img-fluid" src="./assets/img/portfolio/Gridworld1.JPG" alt="In pixel art, there is a small room with a red haired character and text that says 'You got the swordarang, press spacebar to throw it at your enemies." />
+                            <img class="img-fluid" src="./assets/img/portfolio/rq2.JPG" alt="In pixel art, there is a small room with a red haired character picking up a sword" />
                         </div>
                     </div>
                     <!-- Portfolio Item 6-->
                     <div class="col-md-6 col-lg-4">
-                        <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal6">
+                        <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal4">
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
-                                <div class="portfolio-item-caption-content text-center text-white">Scare-Away CAmp</div>
+                                <div class="portfolio-item-caption-content text-center text-white">Scare-Away Camp</div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio/submarine.png" alt="A teenager with purple hair shines a flashlight towards the camera in a dark, open forest" />
+                            <img class="img-fluid" src="./assets/img/portfolio/Scare-Away3.png" alt="A teenager with purple hair shines a flashlight towards the camera in a dark, open forest" />
                         </div>
                     </div>
                 </div>
@@ -302,13 +302,13 @@
                                     <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
                                         <div class="carousel-inner">
                                           <div class="carousel-item active">
-                                            <img src="./assets/img/portfolio/bos3.png" class="d-block w-100 img-fluid rounded mb-5" alt="...">
+                                            <img src="./assets/img/portfolio/bos3.png" class="d-block w-100 img-fluid rounded mb-5" alt="robots in a sci-fi lab">
                                           </div>
                                           <div class="carousel-item">
-                                            <img src="./assets/img/portfolio/bos1.jpg" class="d-block w-100 img-fluid rounded mb-5" alt="...">
+                                            <img src="./assets/img/portfolio/bos1.jpg" class="d-block w-100 img-fluid rounded mb-5" alt="robots in a sci-fi lab">
                                           </div>
                                           <div class="carousel-item">
-                                            <img src="./assets/img/portfolio/bos2.jpg" class="d-block w-100 img-fluid rounded mb-5" alt="...">
+                                            <img src="./assets/img/portfolio/bos2.jpg" class="d-block w-100 img-fluid rounded mb-5" alt="robotsin a sci-fi lab">
                                           </div>
                                           
                                         </div>
@@ -379,16 +379,16 @@
                                     <div id="carouselExampleControls2" class="carousel slide" data-ride="carousel">
                                         <div class="carousel-inner">
                                           <div class="carousel-item active">
-                                            <img src="./assets/img/portfolio/Codetta4.JPG" class="d-block w-100 rounded " alt="...">
+                                            <img src="./assets/img/portfolio/Codetta4.JPG" class="d-block w-100 rounded " alt="pixelated art of musical instrument characters">
                                           </div>
                                           <div class="carousel-item">
-                                            <img src="./assets/img/portfolio/Codetta1.JPG" class="d-block w-100 rounded" alt="...">
+                                            <img src="./assets/img/portfolio/Codetta1.JPG" class="d-block w-100 rounded" alt="pixelated art of musical instrument characters">
                                           </div>
                                           <div class="carousel-item">
-                                            <img src="./assets/img/portfolio/Codetta2.JPG" class="d-block w-100 rounded" alt="...">
+                                            <img src="./assets/img/portfolio/Codetta2.JPG" class="d-block w-100 rounded" alt="pixelated art of musical instrument characters">
                                           </div>
                                           <div class="carousel-item">
-                                            <img src="./assets/img/portfolio/Codetta3.JPG" class="d-block w-100 rounded" alt="...">
+                                            <img src="./assets/img/portfolio/Codetta3.JPG" class="d-block w-100 rounded" alt="pixelated art of musical instrument characters">
                                           </div>
                                         </div>
                                         <a class="carousel-control-prev" href="#carouselExampleControls2" role="button" data-slide="prev">
@@ -439,23 +439,23 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <!-- <img class="img-fluid rounded mb-5" src="./assets/img/portfolio/rq2.JPG" alt="in pixel art there is a small room with a red haired character and text that says 'You got the swordarang, press spacebar to throw it at your enemies.'" /> -->
+                                    <!-- <img class="img-fluid rounded mb-5" src="./assets/img/portfolio/rq2.JPG" alt="in pixel art there is a small room with a red haired character picking up a sword" /> -->
                                     <div id="carouselExampleControls3" class="carousel slide" data-ride="carousel">
                                         <div class="carousel-inner">
                                           <div class="carousel-item active">
-                                            <img src="./assets/img/portfolio/rq2.JPG" class="d-block w-100 rounded " alt="...">
+                                            <img src="./assets/img/portfolio/rq2.JPG" class="d-block w-100 rounded " alt="pixel art of a small town map">
                                           </div>
                                           <div class="carousel-item">
-                                            <img src="./assets/img/portfolio/rq1.JPG" class="d-block w-100 rounded" alt="...">
+                                            <img src="./assets/img/portfolio/rq1.JPG" class="d-block w-100 rounded" alt="pixel art of a small town map">
                                           </div>
                                           <div class="carousel-item">
-                                            <img src="./assets/img/portfolio/rq3.JPG" class="d-block w-100 rounded" alt="...">
+                                            <img src="./assets/img/portfolio/rq3.JPG" class="d-block w-100 rounded" alt="pixel art of a small town map">
                                           </div>
                                           <div class="carousel-item">
-                                            <img src="./assets/img/portfolio/rq4.JPG" class="d-block w-100 rounded" alt="...">
+                                            <img src="./assets/img/portfolio/rq4.JPG" class="d-block w-100 rounded" alt="pixel art of a small town map">
                                           </div>
                                           <div class="carousel-item">
-                                            <img src="./assets/img/portfolio/rq5.JPG" class="d-block w-100 rounded" alt="...">
+                                            <img src="./assets/img/portfolio/rq5.JPG" class="d-block w-100 rounded" alt="pixel art of a small town map">
                                           </div>
                                         </div>
                                         <a class="carousel-control-prev" href="#carouselExampleControls3" role="button" data-slide="prev">
@@ -511,13 +511,13 @@
                                     <div id="carouselExampleControls4" class="carousel slide" data-ride="carousel">
                                         <div class="carousel-inner">
                                           <div class="carousel-item active">
-                                            <img src="./assets/img/portfolio/Scare-Away3.png" class="d-block w-100 rounded " alt="...">
+                                            <img src="./assets/img/portfolio/Scare-Away3.png" class="d-block w-100 rounded " alt="3-D scene where teenagers move around in the darkness of a campsite">
                                           </div>
                                           <div class="carousel-item">
-                                            <img src="./assets/img/portfolio/Scare-Away1.png" class="d-block w-100 rounded" alt="...">
+                                            <img src="./assets/img/portfolio/Scare-Away1.png" class="d-block w-100 rounded" alt="3-D scene where teenagers move around in the darkness of a campsite">
                                           </div>
                                           <div class="carousel-item">
-                                            <img src="./assets/img/portfolio/Scare-Away2.png" class="d-block w-100 rounded" alt="...">
+                                            <img src="./assets/img/portfolio/Scare-Away2.png" class="d-block w-100 rounded" alt="3-D scene where teenagers move around in the darkness of a campsit">
                                           </div>
                                         </div>
                                         <a class="carousel-control-prev" href="#carouselExampleControls4" role="button" data-slide="prev">
