Beginning of updates for Fall 2021.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Christopher Butcher - Game Developer & Composer</title>
+        <title>Christopher Butcher - Video Games & Music!</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
@@ -54,7 +54,7 @@
                     <div class="divider-custom-line"></div>
                 </div>
                 <!-- Masthead Subheading-->
-                <p class="masthead-subheading font-weight-light mb-0" id="to-here">Game Developer, Programmer, & Sound Designer</p>
+                <p class="masthead-subheading font-weight-light mb-0" id="to-here">Game Programmer & Sound Designer</p>
             </div>
         </header>
         <!-- About Section-->
@@ -70,6 +70,7 @@
                 </div> -->
                 <!-- About Section Content-->
                 <div class="row">
+                    <!-- HEY CHRIS... FIX THIS PART FIRST! -->
                     <div class="col-lg-4 ml-auto"><p class="lead">Hello! My name is Christopher Butcher, and I am a Game Programmer, Sound Designer, & Composer. As a programmer, I enjoy trying to solve any problem provided by my design team, looking for new ways to enhance the program and make the code more efficient. </p><p class="lead">When writing music and mixing sound effects, my main goal is to immerse the player in the game world without overwhelming them. This is made possible through middleware implementation, combining my passion for both music and code. </p></div>
                     <div class="col-lg-4 mr-auto"><p class="lead">Currently, I am honing these skills on <i>Breach of Space</i> as both Sound Design Lead & a founding member of the programming team. In <i>Breach of Space</i>, you must defeat the evil corporation that is taking over your home planet. Stealthily distract, sabotage, and cause enough mayhem for the robotic staff to leave your home among the stars for good. </p></div>
                 </div>
@@ -243,7 +244,7 @@
                         <h4 class="text-uppercase mb-4">Location</h4>
                         <p class="lead mb-0">
                             
-                            Bloomington, IN<br />
+                            Bloomington, Indiana<br />
                             United States
                         </p>
                     </div>
@@ -254,7 +255,7 @@
                         <a class="btn btn-outline-light btn-social mx-1" href="https://twitter.com/chrstphrbtchr"><i class="fab fa-fw fa-twitter" target="blank"></i></a>
                         <a class="btn btn-outline-light btn-social mx-1" href="https://www.linkedin.com/in/-christopherbutcher/" target="blank"><i class="fab fa-fw fa-linkedin-in"></i></a>
                         <a class="btn btn-outline-light btn-social mx-1" href="https://bitbucket.org/christopherbutcher/" target="blank"><i class="fab fa-fw fa-bitbucket"></i></a>
-                        <a class="btn btn-outline-light btn-social mx-1" href="mailto:christopher@christopherbutchergames.com"><i class="fas fa-envelope"></i></a>
+                        <a class="btn btn-outline-light btn-social mx-1" href="mailto:christopher@christopherbutcher.com"><i class="fas fa-envelope"></i></a>
                     </div>
                     <!-- Footer About Text-->
                     <div class="col-lg-4">
