--- a/index.html
+++ b/index.html
@@ -71,8 +71,17 @@
                 <!-- About Section Content-->
                 <div class="row">
                     <!-- HEY CHRIS... FIX THIS PART FIRST! -->
-                    <div class="col-lg-4 ml-auto"><p class="lead">Hello! My name is Christopher Butcher, and I am a Game Programmer, Sound Designer, & Composer. As a programmer, I enjoy trying to solve any problem provided by my design team, looking for new ways to enhance the program and make the code more efficient. </p><p class="lead">When writing music and mixing sound effects, my main goal is to immerse the player in the game world without overwhelming them. This is made possible through middleware implementation, combining my passion for both music and code. </p></div>
-                    <div class="col-lg-4 mr-auto"><p class="lead">Currently, I am honing these skills on <i>Breach of Space</i> as both Sound Design Lead & a founding member of the programming team. In <i>Breach of Space</i>, you must defeat the evil corporation that is taking over your home planet. Stealthily distract, sabotage, and cause enough mayhem for the robotic staff to leave your home among the stars for good. </p></div>
+                    <div class="col-lg-4 ml-auto"><p class="lead">Hello! My name is Christopher Butcher, and 
+                        I am a Game Programmer, Sound Designer, & Composer. As a programmer, I enjoy trying 
+                        to solve any problem provided by my design team, 
+                        looking for new ways to enhance the program and make the code more efficient. 
+                    </p><p class="lead">When writing music and mixing sound effects, my main goal is to 
+                        immerse the player in the game world without overwhelming them. This is made possible 
+                        through middleware implementation, combining my passion for both music and code. </p></div>
+                    <div class="col-lg-4 mr-auto"><p class="lead">Currently, I am honing these skills on <i>Breach of Space</i> as 
+                        both Sound Design Lead & a founding member of the programming team. In <i>Breach of Space</i>, you must defeat the 
+                        evil corporation that is taking over your home planet. Stealthily distract, sabotage, and cause enough mayhem for 
+                        the robotic staff to leave your home among the stars for good. </p></div>
                 </div>
                 <!-- About Section Button-->
                 <div class="text-center mt-4">
@@ -167,7 +176,12 @@
                 <!-- About Section Content-->
                 <div class="row">
                     <div class="col-lg-2"></div>
-                    <div class="col-lg-8"><p class="lead text-justify">I've played with orchestras, in jazz combos, and even been on a couple of tours with a punk band. Now, I'm focusing on composing for video games & sound design. Although upright bass is my primary instrument, I can play a little bit of anything thanks to my degree in Instrumental Music Education. These days I write mostly on guitar, bass, and keyboard. As for composing & recording, I use Reason 11, ProTools, Adobe Audition, and FamiStudio.</p>
+                    <div class="col-lg-8"><p class="lead text-justify">I've played with orchestras, in jazz combos, 
+                        and even been on a couple of tours with a punk band. Now, I'm focusing on composing for 
+                        video games & sound design. Although upright bass is my primary instrument, I can play a 
+                        little bit of anything thanks to my degree in Instrumental Music Education. These days I write 
+                        mostly on guitar, bass, and keyboard. As for composing & recording, I use Reason 11, 
+                        ProTools, Adobe Audition, and FamiStudio.</p>
                     <iframe style="border: 4px solid #e0f0df; border-radius: 4px; width: 100%; height: 300px; padding-right: 0px;" src="https://bandcamp.com/EmbeddedPlayer/album=2408887354/size=large/bgcol=333333/linkcol=fe7eaf/artwork=small/transparent=true/" seamless><a href="https://christopherbutcher.bandcamp.com/album/portfolio-demos">Portfolio Demos! by Christopher Butcher</a></iframe>
                     </div>
 
@@ -323,9 +337,18 @@
                                         </a>
                                       </div>
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-5 text-justify"><i>In </i>Breach of Space<i>, you must defeat the evil corporation that is taking over your home planet. Stealthily distract, sabotage, and cause enough mayhem for the robotic staff to leave your home among the stars for good. </i></p>
                                     <p class="mb-5 text-justify">
-                                        Currently, I am honing these skills on <i>Breach of Space</i> as both Sound Design Lead & a founding member of the programming team. In <i>Breach of Space</i>, you must defeat the evil corporation that is taking over your home planet. Stealthily distract, sabotage, and cause enough mayhem for the robotic staff to leave your home among the stars for good. <i>Breach of Space</i> is currently slated for release on February 22nd, 2022. Our team has recently doubled in size, and we plan on spending the summer completing the game with the help of our new members. <i>Breach of Space</i> is made in Unity with FMOD Studio integration.
+                                        <i>In </i>Breach of Space<i>, you must defeat the evil corporation that 
+                                            is taking over your home planet. Stealthily distract, sabotage, and cause enough 
+                                            mayhem for the robotic staff to leave your home among the stars for good. </i></p>
+                                    <p class="mb-5 text-justify">
+                                        Currently, I am honing these skills on <i>Breach of Space</i> as both Sound Design Lead 
+                                        & a founding member of the programming team. In <i>Breach of Space</i>, you must defeat the evil 
+                                        corporation that is taking over your home planet. Stealthily distract, sabotage, and cause enough mayhem 
+                                        for the robotic staff to leave your home among the stars for good. <i>Breach of Space</i> is 
+                                        currently slated for release on February 22nd, 2022. Our team has recently doubled in size, and we plan on
+                                         spending the summer completing the game with the help of our new members. <i>Breach of Space</i> is made 
+                                         in Unity with FMOD Studio integration.
                                     </p>
                                     <h4>Learn More:</h4><p></p>
                                         <a href="./pages/bos_contributions.html" target="blank"><button class="btn btn-primary">
@@ -402,8 +425,16 @@
                                         </a>
                                       </div>
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-5 text-justify"><i>In</i> Codetta<i>, you play as a discarded reel-to-reel player in a world without music. You must guide your character through the 1-bit world to save the forgotten instruments from slimes & bring them together. </i></p>
-                                    <p class="mb-5 text-justify">The goal of <i>Codetta</i> was to craft a short game (less than five minutes) with an emphasis on art style and sound design over the course of six weeks in late 2020. In addition to programming, I composed all of the music, edited & mixed the sound effects, created all art assets, and designed the layout for the game. Fonts & original sound effects were found online under the CC0 license. My idea for the game focused on outliving your perceived obsolescence, and how important it is to find a community you feel comfortable in. It was my first time using Construct 3.</p>
+                                    <p class="mb-5 text-justify"><i>In</i> Codetta<i>, you play as a discarded reel-to-reel player 
+                                        in a world without music. You must guide your character through the 1-bit world to save 
+                                        the forgotten instruments from slimes & bring them together. </i></p>
+                                    <p class="mb-5 text-justify">The goal of <i>Codetta</i> was to craft a short game 
+                                        (less than five minutes) with an emphasis on art style and sound design over the 
+                                        course of six weeks in late 2020. In addition to programming, I composed all of 
+                                        the music, edited & mixed the sound effects, created all art assets, and designed 
+                                        the layout for the game. Fonts & original sound effects were found online under the 
+                                        CC0 license. My idea for the game focused on outliving your perceived obsolescence, and 
+                                        how important it is to find a community you feel comfortable in. It was my first time using Construct 3.</p>
                                     <h4>Play the Game:</h4><p></p><p>
                                         <a href="https://chrbutch.pages.iu.edu/Codetta/" target="blank"><button class="btn btn-primary">
                                         <i class="fa-times fa-fw"></i>
@@ -469,8 +500,15 @@
                                         </a>
                                       </div>
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-5 text-justify">Robin's Quest! <i>is about a princess who wakes to find her kingdom overrun with monsters. She must venture across her kingdom to figure out what is causing this mayhem and how to stop it!</i></p>
-                                    <p class="mb-5 text-justify">Over the summer of 2020, I wanted to find a project to keep myself busy while also teaching myself more about Unity implementation & C# programming. So I gave myself a challenge: make a clone of The Legend of Zelda: A Link to the Past in Unity. While I've had to pause work on it to focus on other projects, it was invaluable to my education and I plan on finishing it during summer 2021.
+                                    <p class="mb-5 text-justify">Robin's Quest! <i>is about a princess who wakes 
+                                        to find her kingdom overrun with monsters. She must venture across her 
+                                        kingdom to figure out what is causing this mayhem and how to stop it!</i></p>
+                                    <p class="mb-5 text-justify">Over the summer of 2020, I wanted to
+                                         find a project to keep myself busy while also teaching myself 
+                                         more about Unity implementation & C# programming. So I gave myself
+                                          a challenge: make a clone of The Legend of Zelda: A Link to the 
+                                          Past in Unity. While I've had to pause work on it to focus on other projects, 
+                                          it was invaluable to my education and I plan on finishing it before Summer 2022.
                                     </p>
                                     <h4>Learn More:</h4><p></p><p>
                                         <a href="https://bitbucket.org/chrstphrbtchr/robins_quest/src/master/" target="blank"><button class="btn btn-primary">
@@ -531,8 +569,13 @@
                                         </a>
                                       </div>
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-5 text-justify"><i>Survive the night at camp, scare some teenagers, and collect the most important pages of your afterlife!</i></p>
-                                    <p class="mb-5 text-justify"><i>Scare-Away Camp</i> is a low-poly first-person survival horror game where you play as a ghost stuck on the wrong side of the veil. You must collect pages to an ancient tome that will help you return home. This was my first ever game, kit bashed myself using Unity and found assets over the course of three weeks. My partner & I also make our voice acting debut as scared teenagers.</p>
+                                    <p class="mb-5 text-justify"><i>Survive the night at camp, scare some teenagers, 
+                                        and collect the most important pages of your afterlife!</i></p>
+                                    <p class="mb-5 text-justify"><i>Scare-Away Camp</i> is a low-poly first-person
+                                         survival horror game where you play as a ghost stuck on the wrong side of the
+                                          veil. You must collect pages to an ancient tome that will help you return home. This 
+                                          was my first ever game, kit bashed myself using Unity and found assets over the course of 
+                                          three weeks. My partner & I also make our voice acting debut as scared teenagers.</p>
                                     <h4>Play the Game:</h4><p></p><p>
                                         <a href="https://chrstphrbtchr.itch.io/scare-away-camp" target="blank"><button class="btn btn-primary">
                                         <i class="fa-times fa-fw"></i>
@@ -612,7 +655,7 @@
                                     <!-- Portfolio Modal - Image-->
                                     <img class="img-fluid rounded mb-5" src="assets/img/portfolio/submarine.png" alt="" />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-5 text-justify">Information Coming Soon.</p>
+                                    <p class="mb-5 text-justify">Information Coming Soon.</p><!-- HEY LOOK! UPDATE THIS!!!!!-->
                                     <button class="btn btn-primary" data-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
                                         Close Window
