Changed phrasing on a couple paragraphs. Made some notes.

--- a/index.html
+++ b/index.html
@@ -342,10 +342,8 @@
                                             is taking over your home planet. Stealthily distract, sabotage, and cause enough 
                                             mayhem for the robotic staff to leave your home among the stars for good. </i></p>
                                     <p class="mb-5 text-justify">
-                                        Currently, I am honing these skills on <i>Breach of Space</i> as both Sound Design Lead 
-                                        & a founding member of the programming team. In <i>Breach of Space</i>, you must defeat the evil 
-                                        corporation that is taking over your home planet. Stealthily distract, sabotage, and cause enough mayhem 
-                                        for the robotic staff to leave your home among the stars for good. <i>Breach of Space</i> is 
+                                        On <i>Breach of Space</i> I serve as both Sound Design Lead 
+                                        & a founding member of the programming team. <i>Breach of Space</i> is 
                                         currently slated for release on February 22nd, 2022. Our team has recently doubled in size, and we plan on
                                          spending the summer completing the game with the help of our new members. <i>Breach of Space</i> is made 
                                          in Unity with FMOD Studio integration.
@@ -429,7 +427,7 @@
                                         in a world without music. You must guide your character through the 1-bit world to save 
                                         the forgotten instruments from slimes & bring them together. </i></p>
                                     <p class="mb-5 text-justify">The goal of <i>Codetta</i> was to craft a short game 
-                                        (less than five minutes) with an emphasis on art style and sound design over the 
+                                        (roughly five minutes) with an emphasis on art style and sound design over the 
                                         course of six weeks in late 2020. In addition to programming, I composed all of 
                                         the music, edited & mixed the sound effects, created all art assets, and designed 
                                         the layout for the game. Fonts & original sound effects were found online under the 
@@ -438,7 +436,7 @@
                                     <h4>Play the Game:</h4><p></p><p>
                                         <a href="https://chrbutch.pages.iu.edu/Codetta/" target="blank"><button class="btn btn-primary">
                                         <i class="fa-times fa-fw"></i>
-                                        Codetta (playable in Browser)
+                                        Codetta (playable in browser)
                                     </button></a></p><br/>
                                     <button class="btn btn-primary" data-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
@@ -509,7 +507,7 @@
                                           a challenge: make a clone of The Legend of Zelda: A Link to the 
                                           Past in Unity. While I've had to pause work on it to focus on other projects, 
                                           it was invaluable to my education and I plan on finishing it before Summer 2022.
-                                    </p>
+                                    </p> <!-- Don't forget to add programming section to this w/ link or img. -->
                                     <h4>Learn More:</h4><p></p><p>
                                         <a href="https://bitbucket.org/chrstphrbtchr/robins_quest/src/master/" target="blank"><button class="btn btn-primary">
                                         <i class="fa-times fa-fw"></i>
@@ -655,7 +653,7 @@
                                     <!-- Portfolio Modal - Image-->
                                     <img class="img-fluid rounded mb-5" src="assets/img/portfolio/submarine.png" alt="" />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-5 text-justify">Information Coming Soon.</p><!-- HEY LOOK! UPDATE THIS!!!!!-->
+                                    <p class="mb-5 text-justify">Alan please add detail.</p><!-- HEY LOOK! UPDATE THIS!!!!!-->
                                     <button class="btn btn-primary" data-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
                                         Close Window
